# FaserkraftApi

./: docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
app/: alembic.ini  celery_worker.py  main_app.py  scheduler.py
app/admin/: backend.py  custom_model_view.py  init_admin.py  save_result.py  utils.py
app/admin/filters/: daily_plan.py  process.py  product_step.py
app/admin/model_views/: __init__.py  backup_db.py  daily_plan.py  daily_plan_step.py  device.py  employee.py  inventory.py  inventory_item.py  order.py  packaging.py  packaging_box.py  process.py  product.py  product_step.py  size_type.py  step_definition.py  step_template.py  user.py
app/alembic/versions/: 2025_10_06_1954-69a284e9d7ae_initial.py  2025_10_30_2116-f2318fd2b927_начальна_миграция.py  2025_11_08_1945-6ed58a8bf1bb_в_employee_добавлено_telegram_id.py  2025_11_24_1738-1138f71642a1_добавлена_device.py  2025_11_27_1254-451ba13329d5_добавлена_device.py  2025_11_27_1324-ade24326d3b8_добавлена_device.py  2025_11_27_1337-c75c8ec20e38_добавлена_device.py  2025_11_28_1443-45e28112c2e4_добавлена_device.py  2025_11_29_1156-6c0c32a63930_добавлена_уникальность_поля_device_id.py  2025_12_07_1340-f1834d497584_добавлена_модель_для_яндекс_токенов.py  (+16 more)
app/api/api_v1/: __init__.py  auth.py  day_plans.py  (+12 more)
app/core/: config.py  logger_init.py  redis.py
app/database/: __init__.py  backup_db.py  db.py
app/releases/: release.json
app/tasks/: __init__.py  create_backup.py  get_or_create_loop.py  send_email.py
app/update/: get_apk_info.py
app/utils/: email_sender.py  qr_code_gentrator.py
(+63 files in other folders)
